fixed the renv lockfile

--- a/R/99_Veg_analyses.Rmd
+++ b/R/99_Veg_analyses.Rmd
@@ -7,7 +7,7 @@ output:
     toc_depth: 2
 self_contained: true
 params:
-  file_code: "GND"
+  file_code: "GRB"
 ---
 
 # About this Document  
@@ -40,6 +40,7 @@ knitr::opts_chunk$set(echo = FALSE,
 
 ```{r pkgs-paths, message = FALSE, warning = FALSE}
 # library(Hmisc)
+library(pbkrtest)
 library(emmeans)
 library(multcomp)
 library(multcompView)
